--- a/mysite.com.conf
+++ b/mysite.com.conf
@@ -1,3 +1,4 @@
+#Configuration written by Brian Valenzi, bv457@uowmail.edu.au
 <VirtualHost *:80>
         ServerAdmin webmaster@didymodesigns.com.au
         ServerName mysite.com
